# fastapi_blog

./: pyproject.toml
backend/: main.py
backend/apis/: base.py
backend/apis/v1/: route_blog.py  route_login.py  route_user.py
backend/apps/: base.py
backend/apps/v1/: route_blog.py  route_login.py
backend/core/: config.py  security.py
backend/db/: session.py
backend/db/models/: blog.py  user.py
backend/db/repository/: blog.py  login.py  user.py
backend/schemas/: blog.py
backend/templates/auth/: register.html
backend/templates/blogs/: detail.html  home.html
backend/tests/test_routes/: test_user.py
