[tool.poetry]
name = "fastapi-blog"
version = "0.1.0"
description = ""
authors = ["dmytro-dexter <dmytroboiko007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^8.1.1"
httpx = "^0.27.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
jinja2 = "^3.1.3"
aiofiles = "^23.2.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
